<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_gray"
    tools:context=".Fragments.Details_of_song">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_details"
                style="@style/detailTextView"
                android:layout_marginTop="16dp"
                android:text="@string/title" />

            <TextView
                android:id="@+id/artist_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/artist" />

            <TextView
                android:id="@+id/album_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/album" />

            <TextView
                android:id="@+id/composer_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/composer" />

            <TextView
                android:id="@+id/duration_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/filePath_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/file_path" />

            <TextView
                android:id="@+id/fileName_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/file_name" />

            <TextView
                android:id="@+id/size_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/size" />

            <TextView
                android:id="@+id/format_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/format" />


            <TextView
                android:id="@+id/bitrate_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/bitrate" />

            <TextView
                android:id="@+id/samplingRate_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sampling_rate" />

            <TextView
                android:id="@+id/channels_count_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:text="@string/channels_count" />

            <TextView
                android:id="@+id/date_added_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/date_added" />

            <TextView
                android:id="@+id/last_modified_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/last_modified" />

            <TextView
                android:id="@+id/isAlarm_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/is_alarm" />

            <TextView
                android:id="@+id/isRingtone_details"
                style="@style/detailTextView"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/is_ringtone" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>