<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_gray"
    tools:context=".Fragments.Edit_song">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/edit_my_music"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#fff" />

        <com.google.android.material.textfield.TextInputLayout style="@style/editor_textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_editor"
                style="@style/editor_editText"
                android:hint="@string/title" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout style="@style/editor_textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/artist_editor"
                style="@style/editor_editText"
                android:hint="@string/artist" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/editor_textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/album_editor"
                style="@style/editor_editText"
                android:hint="@string/album" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:id="@+id/cancelEdit"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:id="@+id/saveEdit"
                />
        </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>