<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/whole_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    >


    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/collapse_down"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/expand_red" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/favorite_on" />

        <ImageView
            android:id="@+id/spinnerMore"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/more_red" />


    </LinearLayout>



    <!--
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:id="@+id/spinnerMors"
        android:focusable="true"
        android:background="@drawable/more_red"
        />
        -->

    <LinearLayout
        android:id="@+id/albumArtParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/albumArt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/albumArt"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:src="@drawable/backgrouns_13" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dummyImageView"
        android:visibility="gone"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:id="@+id/moreOptionsMenu"
        android:visibility="gone"

        >

        <TextView
            android:id="@+id/delete"
            style="@style/More_options"
            android:text="@string/delete" />

        <TextView
            android:id="@+id/goAlbum"
            style="@style/More_options"
            android:text="@string/go_to_album" />
        <TextView
            android:id="@+id/goArtist"
            style="@style/More_options"
            android:text="@string/go_to_artist" />
        <TextView
            android:id="@+id/share"
            style="@style/More_options"
            android:text="@string/share" />

        <TextView
            android:id="@+id/editor"
            style="@style/More_options"
            android:text="@string/editor" />

        <TextView
            android:id="@+id/details"
            style="@style/More_options"
            android:text="@string/details" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:gravity="bottom"
        android:orientation="vertical"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/music_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:inputType="text"
                android:maxLines="1"
                android:text="King of my heart"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/music_artist_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:maxLines="1"
                android:text="Taylor swift - reputation"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/durationPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#fff" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/durationPlayed"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-4:5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/back10"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/previous_10" />

            <ImageView
                android:id="@+id/forward10"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/forward_10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/shuffle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/shuffle_off" />

            <ImageView
                android:id="@+id/previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/playAndPause"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/play_red" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/next" />

            <ImageView
                android:id="@+id/repeat"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/repeat_off" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>